--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ryanairflights",
   "private": true,
   "version": "0.2.0",
+  "author": "piterb",
   "type": "module",
   "scripts": {
     "dev": "vite",
