--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ryanairflights",
   "private": true,
   "version": "0.2.0",
-  "author": "piterb",
+  "author": "piterb (https://github.com/piterb)",
   "type": "module",
   "scripts": {
     "dev": "vite",
